--- a/src/blocks/reviews/reviews.pug
+++ b/src/blocks/reviews/reviews.pug
@@ -53,7 +53,7 @@ mixin reviews(text, mods, isIndex=true, props={})
               })(class="slider__item")
               a.block.mt-20px.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
               .reviews__item-text.ellipsis(data-lines='8')
-                p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
+                p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
             +reviews-user-item(
               {
                 url: 'img/user-reviews-avatar.jpg',
@@ -64,30 +64,30 @@ mixin reviews(text, mods, isIndex=true, props={})
               .reviews__item-text.ellipsis(data-lines='8')
         .tab-pane.fade.-mx-20px#users(role="tabpanel" aria-labelledby="users-tab")
           .reviews__slider.slider.reviews__slider--users
-            +reviews-item(
+            +reviews-user-item(
               {
                 url: 'img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
               })(class="slider__item")
               a.block.mt-20px.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
-              .reviews__item-text.ellipsis(data-lines='8')
-            +reviews-item(
+              .reviews__item-text.ellipsis(data-lines='8') В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. От знакомой узнала, что в соседнем небольшом городке Звенигово Республики Марий Эл работает врач, который кроме стандартного лечения применяет чудо-аппарат.s
+            +reviews-user-item(
               {
                 url: 'img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 2',
                 info: 'С. Федосеевка'
               })(class="slider__item")
               a.block.mt-20px.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
-              .reviews__item-text.ellipsis(data-lines='8')
-            +reviews-item(
+              .reviews__item-text.ellipsis(data-lines='8')  Знакома с аппаратом РИКТА (раньше было название МИЛТА) более 20 лет. <br> В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. От знакомой узнала, что в соседнем небольшом городке Звенигово Республики Марий Эл работает врач, который кроме стандартного лечения применяет чудо-аппарат. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
+            +reviews-user-item(
               {
                 url: 'img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
               })(class="slider__item")
               a.block.mt-20px.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
-              .reviews__item-text.ellipsis(data-lines='8')
+              .reviews__item-text.ellipsis(data-lines='8') В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. От знакомой узнала, что в соседнем небольшом городке Звенигово Республики Марий Эл работает врач, который кроме стандартного лечения применяет чудо-аппарат.
         .tab-pane.fade.-mx-20px#videos(role="tabpanel" aria-labelledby="videos-tab")
           .reviews__slider.reviews__slider--videos
             +reviews-item(
