--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -280,8 +280,8 @@ block content
           .section__content.section__container.container
             .product-catalog
               h2.section__title.mb-0.mt-0.xxl_mb-7px Каталог аппаратов
-              +btn('Все аппараты','simple')(class="pt-3px")
-              .product-list.mt-20px
+              +btn('Все аппараты','simple')(class="pt-3px mb-20px")
+              .product-list
                 +product-card(
                   {
                     url: './img/product.jpg',
@@ -417,7 +417,7 @@ block content
                         img.lazyload(data-src="img/article-2.jpg")
                       .article-preview__text.xxl_pt-30px.xxl_shrink-0
                         .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
-                        .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
+                        .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит? Поллиноз, Сенная Лихорадка, Аллергический Ринит? Поллиноз, Сенная Лихорадка, Аллергический Ринит? Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                         .article-preview__content.hidden
                         +btn('Подробнее','simple')(class="text-md mt-10px")
       .section.page__footer-wrapper.mt-60px.lg_mt-0
