--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -47,6 +47,10 @@
 //   }
 // }
 
+// .question__item {
+//   border-color: red;
+// }
+
 // .method-download {
 //   background-color: transparent;
 //   outline: 1px solid red;
@@ -57,9 +61,11 @@
 // }
 
 // .question__item-wrapper {
-//   background-color: transparent;
+//   background-color: transparent !important;
 //   outline: 1px solid red;
 // }
+
+
 
 // .question__item {
 //   border-color: red;
