--- a/src/blocks/article-preview/article-preview.scss
+++ b/src/blocks/article-preview/article-preview.scss
@@ -31,9 +31,13 @@
 
     @media (min-width: $screen-xxl) {
       @at-root .index &.not-first-page {
-        .tns-slide-active {
+        .tns-slide {
           width: 380px !important;
         }
+      }
+
+      @at-root .index & {
+        display: flex;
       }
 
     }
@@ -44,6 +48,14 @@
     border-radius: 4px;
     border: 1px solid $tw-gray-200;
     overflow: hidden;
+
+    .index & {
+      @media (max-width: $screen-xxl - 1) {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+      }
+    }
 
     @media (min-width: $items2-width) {
       display: flex;
@@ -61,6 +73,10 @@
     height: 169px;
     overflow: hidden;
 
+    .index & {
+      flex-grow: 1;
+    }
+
     @media (min-width: 381px) {
       height: 240px;
     }
@@ -75,7 +91,7 @@
 
     .index & {
       @media (min-width: $screen-xxl) {
-        height: 50%;
+        height: 100%;
       }
     }
 
@@ -106,6 +122,14 @@
   &__text {
     padding: 20px 30px 30px;
 
+    .index & {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      align-items: start;
+    }
+
+
     @media (min-width: $items2-width) {
       display: flex;
       flex-direction: column;
@@ -121,9 +145,9 @@
     }
 
     .index & {
-       @media (min-width: $items2-width) {
+      @media (min-width: $items2-width) {
         flex-grow: 1;
-       }
+      }
     }
   }
 
