--- a/src/blocks/cart/cart.scss
+++ b/src/blocks/cart/cart.scss
@@ -187,6 +187,12 @@
       transition: all 0.6s;
     }
 
+    &:last-child {
+      &::after {
+        display: none;
+      }
+    }
+
     &__inner {}
   }
 
