--- a/src/blocks/product-card/product-card.scss
+++ b/src/blocks/product-card/product-card.scss
@@ -9,7 +9,7 @@
   color: $tw-black;
 
   &.slider__item {
-    display: flex !important;
+    display: inline-flex !important;
   }
 
   &--catalog {
@@ -143,7 +143,16 @@
     }
   }
 
+  &--wishlist {
+    #{$block-name}__inner {
+      height: 100%;
+    }
 
+    .btn--delete {
+      margin-top: 18px;
+      color: $tw-red-900;
+    }
+  }
 
   &__inner {
     display: flex;
@@ -281,7 +290,8 @@
       color: $tw-yellow-500;
     }
 
-    &--none {
+    &--none,
+    &--few {
       color: $tw-red-900;
     }
 
