--- a/src/blocks/question/question.scss
+++ b/src/blocks/question/question.scss
@@ -6,31 +6,25 @@
 
   $block-name:                &; // #{$block-name}__element
 
-
   &__item {
-    margin-bottom: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
+    border-bottom: 1px solid $tw-gray-200;
+    transition: transform $transition-time;
 
-    // @media (min-width: $screen-lg) {
-    //   margin-bottom: 10px;
-    // }
+    #{$block-name}__item-wrapper--open & {
+      transform: translateX(30px);
+      border-color: transparent;
+    }
   }
 
   &__item-wrapper {
-    margin-bottom: 30px;
-    padding: 30px;
+    padding-top: 30px;
+    border-radius: 10px;
+    overflow: hidden;
 
-    #{$block-name}__content {
-      padding-right: 0;
-    }
-
-    #{$block-name}__item {
-      margin-bottom: 0;
-    }
-
-    #{$block-name}__btn {
-      svg {
-        margin-right: 0;
-      }
+    &--open {
+      background-color: $tw-gray-200;
     }
   }
 
@@ -40,7 +34,6 @@
   }
 
   &__content {
-    padding-right: 30px;
     padding-top: 20px;
     p {
       margin-bottom: 10px;
@@ -54,15 +47,22 @@
     width: 100%;
     text-align: left;
 
+    span {
+      padding-right: 30px;
+    }
 
     svg {
       flex-shrink: 0;
       margin-top: 0.7em;
       margin-left: 20px;
-      margin-right: 30px;
+      transition: transform $transition-time;
 
       #vert {
         display: none;
+      }
+
+      #{$block-name}__item-wrapper--open & {
+        transform: translateX(-30px);
       }
     }
 
@@ -75,6 +75,9 @@
     }
   }
 
-
+  &__collapse-inner {
+    padding-top: 10px;
+    padding-right: 30px;
+  }
 
 }
