--- a/src/blocks/reviews/reviews.scss
+++ b/src/blocks/reviews/reviews.scss
@@ -50,6 +50,8 @@
      }
 
     .btn {
+      margin-top: auto;
+
       @media (min-width: $screen-lg) {
         grid-column-start: 2;
         grid-column-end: 3;
@@ -67,6 +69,10 @@
 
   &__item-inner {
     padding: 30px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 
     @media (min-width: $screen-lg) {
       display: grid;
@@ -79,6 +85,7 @@
         padding-top: 10px !important;
         padding-bottom: 20px !important;
       }
+      height: auto;
      }
 
     @media (min-width: $screen-xxl) {
@@ -169,7 +176,8 @@
   }
 
   &__item-text {
-    margin-top: 10px;
+    margin-top: auto;
+    margin-bottom: 10px;
     font-size: 16px;
     line-height: 26px;
     color: $tw-gray-500;
