--- a/src/blocks/search-form/search-form.pug
+++ b/src/blocks/search-form/search-form.pug
@@ -1,6 +1,6 @@
 //- Все примеси в этом файле должны начинаться c имени блока (search-form)
 
-mixin search-form(text, mods)
+mixin search-form(mods)
 
   //- Принимает:
   //-   text    {string} - текст
@@ -18,8 +18,32 @@ mixin search-form(text, mods)
       }
     }
 
-  form.search-form(class=allMods)&attributes(attributes)
+  form.search-form(action="/poisk/" class=allMods)&attributes(attributes)
     .search-form__input-wrapper
-      input.search-form__input(type="text" placeholder="Введите ваш поисковой запрос")
+      input.search-form__input(type="text" placeholder="Введите ваш поисковой запрос" name="q")
       block
 
+mixin search-form2(mods)
+
+  //- Принимает:
+  //-   text    {string} - текст
+  //-   mods    {string} - список модификаторов
+  //- Вызов:
+        +search-form('Текст', 'some-mod')
+
+  -
+    // список модификаторов
+    var allMods = '';
+    if(typeof(mods) !== 'undefined' && mods) {
+      var modsList = mods.split(',');
+      for (var i = 0; i < modsList.length; i++) {
+        allMods = allMods + ' search-form--' + modsList[i].trim();
+      }
+    }
+
+
+  form.search-form(action="/poisk/" class=allMods)&attributes(attributes)
+    .search-form__input-wrapper
+      input.search-form__input(type="text" placeholder="Введите ваш поисковой запрос" name="q")
+      +action-btn-svg('search', {w: '21', h: '20'}, 'search')(id="btnSearch" class="search-form__btn" type="button")
+    block
