--- a/src/blocks/search-form/search-form.scss
+++ b/src/blocks/search-form/search-form.scss
@@ -9,7 +9,7 @@
   $transition-time-search: 600ms;
 
   position: relative;
-  height: 36px;
+  // height: 36px;
   box-sizing: border-box;
   width: 0;
   right: 0;
@@ -22,6 +22,27 @@
 
   &.active {
     z-index: 20;
+  }
+
+  &--results {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+
+    @media (min-width: $screen-md) {
+      flex-direction: row;
+    }
+
+    .field-select {
+      height: 40px;
+
+      &__wrapper {
+        @media (min-width: $screen-md) {
+          width: 23%;
+          min-width: 240px;
+        }
+      }
+    }
   }
 
   &__input-wrapper {
@@ -37,20 +58,40 @@
     @media (min-width: $screen-lg) {
       width: 660px;
     }
+
     @media (min-width: $screen-xl) {
       width: 720px;
     }
+
     @media (min-width: $screen-xxl) {
       width: 800px;
     }
+
     @media (min-width: $screen-3xl) {
       width: 1170px;
     }
 
     #{$block-name}.active & {
       max-width: 900px;
+
       @media (min-width: $screen-3xl) {
         max-width: 1200px;
+      }
+    }
+
+    #{$block-name}--results & {
+      position: relative;
+      width: 100%;
+      max-width: none;
+      margin-bottom: 30px;
+
+      @media (min-width: $screen-md) {
+        margin-right: 15px;
+        margin-bottom: 0;
+      }
+
+      @media (min-width: $screen-xl) {
+        margin-right: 32px;
       }
     }
   }
@@ -73,15 +114,27 @@
       margin: 0;
     }
 
+    &::placeholder {
+      color: $tw-gray-300;
+      opacity: 1;
+
+      #{$block-name}--results & {
+        color: $tw-black;
+      }
+    }
+
+
     #{$block-name}.active & {
       max-width: 100%;
       padding-left: 18px;
       padding-right: 40px;
     }
 
-    &::placeholder {
-      color: $tw-gray-300;
-      opacity: 1;
+    #{$block-name}--results & {
+      padding: 6px 15px;
+      border-radius: 4px;
+      margin: 0;
+      @apply text-lg;
     }
   }
 
@@ -96,34 +149,6 @@
     margin-right: 10px;
     background-color: transparent;
     pointer-events: painted;
-
-    // #{$block-name}.active & {
-    //   right: 102px;
-    //   transition: all $transition-time-search;
-
-    //   @media (min-width: $screen-xl) {
-    //     right: 0;
-    //   }
-    // }
-
-    // #{$block-name} &.active{
-    //   right: 20px;
-    // }
-
-    // &:focus {
-    //   outline: 2px solid green;
-    // }
-
-    // &:focus ~ #{$block-name}__input {
-    //   outline: 2px solid red;
-    //   width: 200px;
-    //   border-radius: 0px;
-    //   border-bottom: 1px solid rgba(255, 255, 255, .5);
-    //   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-    //         background-color: red;
-    // //background-color: $tw-gray-100;
-
-    // }
   }
 
 
