--- a/src/blocks/wishlist/wishlist.scss
+++ b/src/blocks/wishlist/wishlist.scss
@@ -1,8 +1,8 @@
-// В этом файле должны быть стили для БЭМ-блока product-list, его элементов,
+// В этом файле должны быть стили для БЭМ-блока wishlist, его элементов,
 // модификаторов, псевдоселекторов, псевдоэлементов, @media-условий...
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
-.product-list {
+.wishlist {
 
   $block-name:                &; // #{$block-name}__element
 
